add wip message

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Sarah Huang</h1>
+<p>This portfolio website is currently a work in progress.</p>
+<p>In the meantime, please check out my GitHub to view my projects.</p>
 
 </body>
 </html>
