adding null time project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper-->
 			<div id="wrapper">
 
-				<!-- Nav -->
+				<!-- Nav - Change the icons here -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
@@ -31,12 +31,11 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Sarah Huang</h1>
-									<p>I am a senior at the University of Tennessee Knoxville, working towards my Bachelor's degree in computer science. 
-										I am invested in front-end development and software engineering because I love coding what I can visually see. From developing small games 
+									<p>I am invested in front-end development and software engineering because I love coding what I can visually see. From developing small games 
 										from scratch in high school to updating websites for work and clubs, I enjoy beautifying applications to create inclusive human-centered experiences. </p>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+									<span class=" solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.png" alt="professional headshot of sarah huang" />
 								</a>
 							</article>
@@ -44,7 +43,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Projects</h2>
 								</header>
 								<p>
 									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
@@ -54,7 +53,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang/nullTime-prod" class="image fit"><img src="images/null_time.gif" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
@@ -69,25 +68,7 @@
 											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -96,9 +77,9 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Contact Me</h2>
+									<h2>Wanna connect?</h2>
 								</header>
-								<form action="#" method="post">
+								<!--<form action="#" method="post">
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
@@ -118,7 +99,7 @@
 											</div>
 										</div>
 									</div>
-								</form>
+								</form>-->
 							</article>
 
 					</div>
