finished adding projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav - Change the icons here -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 					</nav>
 
@@ -46,29 +46,28 @@
 									<h2>Projects</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									All notable class and personal projects have their own mention!<br>
+									To see all projects on GitHub, please select the last image.
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/sarhuang/nullTime-prod" class="image fit"><img src="images/null_time.gif" alt=""></a>
+											<a href="https://github.com/sarhuang/sarhuang.github.io" class="image fit"><img src="images/pic01.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang/nullTime-prod" class="image fit"><img src="images/pic02.gif" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang/cosc452/" class="image fit"><img src="images/pic03.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang/Dungeon-Dweller" class="image fit"><img src="images/pic04.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang/Horde" class="image fit"><img src="images/pic05.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://github.com/sarhuang" class="image fit"><img src="images/pic06.gif" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -107,7 +106,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; sarhuang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
