--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Sarah Huang</h1>
+									<h1>SARAH HUANG</h1>
 									<p>I am invested in front-end development and software engineering because I love coding what I can visually see. From developing small games 
 										from scratch in high school to updating websites for work and clubs, I enjoy beautifying applications to create inclusive human-centered experiences. </p>
 								</header>
@@ -43,7 +43,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Projects</h2>
+									<h2>CODING PROJECTS</h2>
 								</header>
 								<p>
 									All notable class and personal projects have their own mention!<br>
@@ -76,8 +76,16 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Wanna connect?</h2>
+									<h2>CONTACT ME</h2>
 								</header>
+								<ul>
+									<li>Email: sarhuang101@gmail.com</li>
+									<li><a href="https://www.linkedin.com/in/sarhuang101/">LinkedIn</a></li>
+									<li><a href="https://github.com/sarhuang">GitHub</a></li>
+									
+
+
+								</ul>
 								<!--<form action="#" method="post">
 									<div>
 										<div class="row">
