--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper-->
-			<div id="wrapper">
+		<div class="typing-container">
+			<p id="typing-text"></p>
+		</div>
 
+		<!-- Wrapper - Keeps everything centered -->
+			<div id="wrapper">
 				<!-- Nav - Change the icons here -->
 					<nav id="nav">
+						
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
