--- a/index.html
+++ b/index.html
@@ -79,12 +79,16 @@
 								</section>
 							</article>
 
+
 							<article id="profile" class="panel">
 								<header>
 									<h2>ABOUT ME</h2>
 								</header>
-								
+								<h3>Resume</h1>
+								<iframe src="assets/sarah_huang_resume.pdf" width="800" height="500"></iframe>
 							</article>
+
+
 
 						<!-- Contact -->
 							<article id="contact" class="panel">
