--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 										</div>
 									</div>
 								</section>
+								<h3>Resume</h3>
+								<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>
 							</article>
 
 
@@ -84,8 +86,7 @@
 								<header>
 									<h2>ABOUT ME</h2>
 								</header>
-								<h3>Resume</h1>
-								<iframe src="assets/sarah_huang_resume.pdf" width="800" height="500"></iframe>
+								
 							</article>
 
 
@@ -100,27 +101,6 @@
 									<li><a href="https://www.linkedin.com/in/sarhuang101/">LinkedIn</a></li>
 									<li><a href="https://github.com/sarhuang">GitHub</a></li>
 								</ul>
-								<!--<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>-->
 							</article>
 
 							
@@ -130,7 +110,8 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; sarhuang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2023 sarhuang</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
