--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>SARAH HUANG</h1>
-									<p>I am invested in front-end development and software engineering because I love coding what I can visually see. From developing small games 
-										from scratch in high school to updating websites for work and clubs, I enjoy beautifying applications to create inclusive human-centered experiences. </p>
+									<p>I love coding what I can visually see. From developing small games 
+										from scratch in high school to updating websites for work and clubs, I enjoy beautifying applications to create human-centered experiences. </p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -85,7 +85,7 @@
 								<header>
 									<h2>ABOUT ME</h2>
 								</header>
-								<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>
+								<!--<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>-->
 								
 							</article>
 
