--- a/index.html
+++ b/index.html
@@ -37,14 +37,33 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>SARAH HUANG</h1>
-									<p>I love coding what I can visually see. From developing small games 
+									<p>I love coding what I can visually see! From developing small games 
 										from scratch in high school to updating websites for work and clubs, I enjoy beautifying applications to create human-centered experiences. </p>
 								</header>
+
+								<!-- Picture Slideshow  -->
+								<div class="slideshow-container">
+									<div class="slides fade">
+										<img src="images/me_3024.png" style="width:100%">
+									</div>
+									<div class="slides fade">
+										<img src="images/sase.jpg" style="width:100%">
+									</div>
+									<div class="slides fade">
+										<img src="images/ics.png" style="width:100%">
+									</div>
+									<!-- Next and previous buttons -->
+									<a class="prev" onclick="nextSlide(-1)">&#10094;</a>
+									<a class="next" onclick="nextSlide(1)">&#10095;</a>
+									</div>
+									<br>
+									<!--
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.png" alt="professional headshot of sarah huang">
-								</a>
+								</a>-->
 							</article>
+
 
 						<!-- Work -->
 							<article id="work" class="panel">
