fix slideshow sizing

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 								</header>
 
 								<!-- Picture Slideshow  -->
-								<div class="slideshow-container">
-									<div class="slides fade">
+								<div class="slideshow-container pic">
+									<!--<div class="slides fade">
 										<img src="images/me_3024.png" style="width:100%">
-									</div>
+									</div>-->
 									<div class="slides fade">
 										<img src="images/sase.jpg" style="width:100%">
 									</div>
