--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 
 								<!-- Picture Slideshow  -->
 								<div class="slideshow-container pic">
-									<!--<div class="slides fade">
-										<img src="images/me_3024.png" style="width:100%">
-									</div>-->
 									<div class="slides fade">
-										<img src="images/sase.jpg" style="width:100%">
+										<img src="images/me_3024.png" alt="professional headshot of sarah huang">
 									</div>
 									<div class="slides fade">
-										<img src="images/ics.png" style="width:100%">
+										<img src="images/sase.jpg" alt="sarah at sase nc 2023">
+									</div>
+									<div class="slides fade">
+										<img src="images/ics.png" alt="sarah at kao ics job">
 									</div>
 									<!-- Next and previous buttons -->
-									<a class="prev" onclick="nextSlide(-1)">&#10094;</a>
-									<a class="next" onclick="nextSlide(1)">&#10095;</a>
+									<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
+									<a class="next arrow" onclick="nextSlide(1)">&#10095;</a>
 									</div>
 									<br>
 									<!--
