trying to figure out a companion

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
-		
-
 		<!-- Wrapper - Keeps everything centered -->
 			<div id="wrapper">
 				<div class="typing-container">
@@ -54,14 +51,8 @@
 									</div>
 									<!-- Next and previous buttons -->
 									<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
-									<a class="next arrow" onclick="nextSlide(1)">&#10095;</a>
-									</div>
-									<br>
-									<!--
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.png" alt="professional headshot of sarah huang">
-								</a>-->
+									<a class="next arrow" onclick="nextSlide(1)">&#10095;</a>								
+								</div>
 							</article>
 
 
@@ -134,6 +125,10 @@
 						</ul>
 					</div>
 
+			</div>
+
+			<div id="companion">
+				<a href="https://www.youtube.com/watch?v=gvlI36lVPgI"><img src="images/gif_test.gif"></a>
 			</div>
 
 		<!-- Scripts -->
