commenting out companion

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			</div>
 
 			<div id="companion">
-				<a href="https://www.youtube.com/watch?v=gvlI36lVPgI"><img src="images/gif_test.gif"></a>
+				<!--<a href="https://www.youtube.com/watch?v=gvlI36lVPgI"><img src="images/gif_test.gif"></a>-->
 			</div>
 
 		<!-- Scripts -->
