trying iframe pdf stuff

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 							<article id="work-portfolio" class="panel">
 								<header>
-									<h1>Personal Portfolio Website</h1>
+									<h1>Personal Portfolio Website - <a href="https://github.com/sarhuang/sarhuang.github.io" class="fa fa-link"><span>GitHub</span></a></h1>
 								</header>
-								<a href="https://github.com/sarhuang/sarhuang.github.io" class="fa-brands fa-square-github"><span>Github Page</span></a>
+								
 								<h2>Background</h2>
 								<p>
 									The best way to practice front-end development skills is making your own website! 
@@ -116,9 +116,8 @@
 
 							<article id="work-nulltime" class="panel">
 								<header>
-									<h1>nulltime</h1>
+									<h1>nulltime - <a href="https://github.com/sarhuang/nullTime-prod" class="fa fa-link"><span>GitHub</span></a></h1>
 								</header>
-								<a href="https://github.com/sarhuang/nullTime-prod" class="fa-brands fa-square-github"><span>Github Page</span></a>
 								<h2>Background</h2>
 								<p>
 									My favorite college computer science course was Software Engineering in junior year. I always felt unmotivated to get the weekly/bi-weekly coding assignment done because we would just move on to the next one.
@@ -129,13 +128,13 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<object data= 
+								<iframe data= 
 									"https://github.com/sarhuang/nullTime-prod/blob/main/Nulltime%20Demo.pdf" 
 									width="800"
 									height="500"> 
-								</object> 
+								</iframe> 
 								<p>
-									
+
 								</p>
 
 								<!--<h2>Meet </h2>-->	
