--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe data= 
-									"https://github.com/sarhuang/nullTime-prod/blob/main/Nulltime%20Demo.pdf" 
+								<iframe src= 
+									"https://github.com/sarhuang/nullTime-prod/blob/5736c326b85d834c89e3ba636753526a30cc909e/Nulltime%20Demo.pdf" 
 									width="800"
 									height="500"> 
 								</iframe> 
