--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe src= "pdfs/Nulltime Demo.pdf" 
-									width="800"
+								<iframe src= "pdfs\Nulltime Demo.pdf"
+									width="500"
 									height="500"> 
 								</iframe> 
 								<p>
