--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<header>
 									<h2>ABOUT ME</h2>
 								</header>
-								<!--<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>-->
+								<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>
 								
 							</article>
 
