--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe src= "pdfs\Nulltime Demo.pdf"
-									width="500"
-									height="500"> 
+								<iframe src= "pdfs\Nulltime Demo.pdf" class="image fit"> 
 								</iframe> 
 								<p>
 
