--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe src= "pdfs\Nulltime Demo.pdf" class="image fit"> 
+								<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured"> 
 								</iframe> 
 								<p>
 
