--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured"> 
-								</iframe> 
+								<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured" height="500"></iframe> 
 								<p>
 
 								</p>
