add cosc452 and dungeon dweller pages

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 											<a href="#work-nulltime" class="image fit"><img src="images/pic02.gif" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/sarhuang/cosc452/" class="image fit"><img src="images/pic03.png" alt=""></a>
+											<a href="#work-cosc452" class="image fit"><img src="images/pic03.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/sarhuang/Dungeon-Dweller" class="image fit"><img src="images/pic04.png" alt=""></a>
+											<a href="#work-dungeon_dweller" class="image fit"><img src="images/pic04.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/sarhuang/Horde" class="image fit"><img src="images/pic05.png" alt=""></a>
@@ -128,20 +128,84 @@
 									<br>
 									Below is our powerpoint presentation that explains the software:
 								</p>
-								<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured" height="500"></iframe> 
+								<!--<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured" height="500"></iframe> -->
+								<h2>My Contribution</h2>
 								<p>
-
-								</p>
-
-								<!--<h2>Meet </h2>-->	
+									This project convinced me that I wanted to do front-end development. 
+									It was my first experience using Angular, and I haven't used HTML and CSS since high school.
+									<b>I was responsible for the game's aesthetic!</b> My inspiration was Kahoot because of its simple and bright look.
+									<ul>
+										<li>Created the logo and icons in Canva</li>
+										<li>Programmed and designed the error modals</li>
+										<li>Drew the instruction help pictures</li>
+										<li>Chose the background and color scheme</li>
+										<li>Chose the game music</li>
+									</ul>
+								</p>		
 							</article>
 
+							<article id="work-cosc452" class="panel">
+								<header>
+									<h1>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h1>
+								</header>
+								<h2>Background</h2>
+								<p>
+									This class was definitely a standout in that it is one of the few classes that teach Javascript.
+									As someone who really likes coding visual things, this class was a fun creative challenge.
+									Big respect to people who enjoy using OpenGL and WebGL because rendering and lighting is not easy.
+									<br><br>
+									My pride and joy is my final project "Ejected." Inspired by the game Among Us, I wanted to illustrate a story
+									of when a player gets voted off the ship and ejected into space. The Among Us model can be moved around while 
+									the song "Claire de Lune" by by Claude Debussy plays.
+								</p>
+								<iframe src="http://web.eecs.utk.edu/~shuang24/extended-rundown/final/" class="image featured" height="800"></iframe>
+								<p>
+									Check out the GitHub repo to see other renderings. I don't know how long my UTK url will last, but those projects can be accessed with this link:
+									<br>
+									<b>http://web.eecs.utk.edu/~shuang24/extended-rundown/[FOLDER 1]/[FOLDER 2]</b>
+									<br><br>
+									Some labs have multiple parts so you may want to specifically see lab3, step 1.
+									Therefore, it would be http://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1
+								</p>
+								<iframe src="http://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1" class="image featured" height="500"></iframe>
+							</article>
+
+							<article id="work-dungeon_dweller" class="panel">
+								<header>
+									<h1>Dungeon Dweller - <a href="https://github.com/sarhuang/Dungeon-Dweller" class="fa fa-link"><span>GitHub</span></a></h1>
+								</header>
+								<h2>Background</h2>
+								<p>
+									The best project I created in high school. In my senior year of high school, we had to create a game with the game engine Greenfoot (meant for education, not real game development).
+									The premise is a green slime was captured by a human kingdom and now must escape the dungeon to return back to its forest home.
+									It is a simple 2D shooter in which the player must survive until the timer runs out. Additionally, there is a boss fight and cutscenes to flesh out the game.
+									Fun fact: this game is based on Ponyu, my very first game I made with my friend.
+								</p>
+								<iframe src="https://www.greenfoot.org/scenarios/28303" class="image featured" height="800"></iframe>
+								<h2>My Contributions</h2>
+								This was a two-person project, and I was in charge of the game aesthetics.
+								<ul>
+									<li>Designed all character sprites in Pixilart</li>
+									<li>Chose backgrounds and game music</li>
+									<li>Illustrated the cutscenes</li>
+									<li>Programmed the boss fight</li>
+								</ul>
+							</article>
+
+							<article id="work-d" class="panel">
+								https://github.com/sarhuang/Dungeon-Dweller
+								<header>
+									<h1>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h1>
+								</header>
+								<h2>Background</h2>
+								<p>
+							</article>
 
 							<article id="profile" class="panel">
 								<header>
 									<h2>ABOUT ME</h2>
 								</header>
-								<iframe src="sarah_huang_resume.pdf" width="800" height="500"></iframe>
+								<!--<iframe src="sarah_huang_resume.pdf" class="image featured" height="500"></iframe>-->
 								
 							</article>
 
