--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
 									of when a player gets voted off the ship and ejected into space. The Among Us model can be moved around while 
 									the song "Claire de Lune" by by Claude Debussy plays.
 								</p>
-								<iframe src="http://web.eecs.utk.edu/~shuang24/extended-rundown/final/" class="image featured" height="800"></iframe>
+								<iframe src="https://web.eecs.utk.edu/~shuang24/extended-rundown/final/" class="image featured" height="800"></iframe>
 								<p>
 									Check out the GitHub repo to see other renderings. I don't know how long my UTK url will last, but those projects can be accessed with this link:
 									<br>
-									<b>http://web.eecs.utk.edu/~shuang24/extended-rundown/[FOLDER 1]/[FOLDER 2]</b>
+									<b>https://web.eecs.utk.edu/~shuang24/extended-rundown/[FOLDER 1]/[FOLDER 2]</b>
 									<br><br>
 									Some labs have multiple parts so you may want to specifically see lab3, step 1.
-									Therefore, it would be http://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1
+									Therefore, it would be https://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1
 								</p>
-								<iframe src="http://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1" class="image featured" height="500"></iframe>
+								<iframe src="https://web.eecs.utk.edu/~shuang24/extended-rundown/lab3/step1" class="image featured" height="500"></iframe>
 							</article>
 
 							<article id="work-dungeon_dweller" class="panel">
