embed dungeon dweller

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 									It is a simple 2D shooter in which the player must survive until the timer runs out. Additionally, there is a boss fight and cutscenes to flesh out the game.
 									Fun fact: this game is based on Ponyu, my very first game I made with my friend.
 								</p>
-								<iframe src="https://www.greenfoot.org/scenarios/28303" class="image featured" height="800"></iframe>
+								<iframe src="https://www.greenfoot.org/scenarios/28303//&output=embed" class="image featured" height="800"></iframe>
 								<h2>My Contributions</h2>
 								This was a two-person project, and I was in charge of the game aesthetics.
 								<ul>
