dungeon dweller page done

--- a/index.html
+++ b/index.html
@@ -180,15 +180,21 @@
 									The premise is a green slime was captured by a human kingdom and now must escape the dungeon to return back to its forest home.
 									It is a simple 2D shooter in which the player must survive until the timer runs out. Additionally, there is a boss fight and cutscenes to flesh out the game.
 									Fun fact: this game is based on Ponyu, my very first game I made with my friend.
+								</p>		
+								<video class="image featured" controls>
+									<source src="pdfs/dungeon_dweller_demo.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>						
+								<p>Play the game <a href="https://www.greenfoot.org/scenarios/28303">here</a>.
+									It must be impressive if there are over 1000 views.
 								</p>
-								<iframe src="https://www.greenfoot.org/scenarios/28303?embed=true" class="image featured" height="500" allowfullscreen="" ></iframe>
 								<h2>My Contributions</h2>
-								This was a two-person project, and I was in charge of the game aesthetics.
+								This was a two-person project (me and Tyler Blair), and I was in charge of the game aesthetics.
 								<ul>
 									<li>Designed all character sprites in Pixilart</li>
 									<li>Chose backgrounds and game music</li>
 									<li>Illustrated the cutscenes</li>
-									<li>Programmed the boss fight</li>
+									<li>Programmed the boss fight, enemy behavior, player controls, healthbar, etc.</li>
 								</ul>
 							</article>
 
