--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 					<!-- Picture Slideshow  -->
 					<div class="slideshow-container pic">
 						<div class="slides fade">
-							<img src="images/me_3024.png" alt="professional headshot of sarah huang">
+							<img src="images/home_slideshow/me_3024.png" alt="professional headshot of sarah huang">
 						</div>
 						<div class="slides fade">
-							<img src="images/sase.jpg" alt="sarah at sase nc 2023">
+							<img src="images/home_slideshow/sase.jpg" alt="sarah at sase nc 2023">
 						</div>
 						<div class="slides fade">
-							<img src="images/ics.png" alt="sarah at kao ics job">
+							<img src="images/home_slideshow/ics.png" alt="sarah at kao ics job">
 						</div>
 						<!-- Next and previous buttons -->
 						<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
@@ -64,22 +64,22 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-portfolio" class="image fit"><img src="images/pic01.png" alt=""></a>
+								<a href="#work-portfolio" class="image fit"><img src="images/project_thumbnails/pic01.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-nulltime" class="image fit"><img src="images/pic02.gif" alt=""></a>
+								<a href="#work-nulltime" class="image fit"><img src="images/project_thumbnails/pic02.gif" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-cosc452" class="image fit"><img src="images/pic03.png" alt=""></a>
+								<a href="#work-cosc452" class="image fit"><img src="images/project_thumbnails/pic03.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-dungeon_dweller" class="image fit"><img src="images/pic04.png" alt=""></a>
+								<a href="#work-dungeon_dweller" class="image fit"><img src="images/project_thumbnails/pic04.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-horde" class="image fit"><img src="images/pic05.png" alt=""></a>
+								<a href="#work-horde" class="image fit"><img src="images/project_thumbnails/pic05.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="https://github.com/sarhuang" class="image fit"><img src="images/pic06.gif" alt=""></a>
+								<a href="https://github.com/sarhuang" class="image fit"><img src="images/project_thumbnails/pic06.gif" alt=""></a>
 							</div>
 						</div>
 					</section>
@@ -178,7 +178,7 @@
 						Fun fact: this game is based on Ponyu, my very first game I made with my friend.
 					</p>		
 					<video class="image featured" controls>
-						<source src="pdfs/dungeon_dweller_demo.mp4" type="video/mp4">
+						<source src="images/videos/dungeon_dweller_demo.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>						
 					<p>Play the game <a href="https://www.greenfoot.org/scenarios/28303">here</a>.
@@ -205,7 +205,7 @@
 						I programmed everything and designed all the sprites and background. 
 					</p>		
 					<video class="image featured" controls>
-						<source src="pdfs/horde_demo.mp4" type="video/mp4">
+						<source src="images/videos/horde_demo.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>						
 					<p>Play the game <a href="https://www.greenfoot.org/scenarios/28325">here</a>.
