write about me section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<!-- Work -->
 				<article id="work" class="panel">
-					<header><h2>CODING PROJECTS</h2></header>
+					<header><h1>CODING PROJECTS</h1></header>
 					<p>
 						All notable class and personal projects have their own mention!<br>
 						To see all projects on GitHub, please select the last image.
@@ -88,10 +88,10 @@
 
 				<article id="work-portfolio" class="panel">
 					<header>
-						<h1>Personal Portfolio Website - <a href="https://github.com/sarhuang/sarhuang.github.io" class="fa fa-link"><span>GitHub</span></a></h1>
+						<h2>Personal Portfolio Website - <a href="https://github.com/sarhuang/sarhuang.github.io" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
 					
-					<h2>Background</h2>
+					<h3>Background</h3>
 					<p>
 						The best way to practice front-end development skills is making your own website! 
 						Plus, it's a great way to show your projects off visually instead of linking a Github repo.
@@ -99,7 +99,7 @@
 						So shout out to "Astral by HTML5 UP" for the beautiful template because I decided to do this the night before the fair.
 						I will be adding my own code to it for now on.
 					</p>
-					<h2>Inspiration</h2>
+					<h3>Inspiration</h3>
 					<p>
 						Back to that career fair, I needed to make a portfolio site quick. I wanted to create an easy theme because using the default design would make it clear it's a template.
 						Then I thought of Louie Zong's "hello world" song on <a href="https://youtu.be/Yw6u6YkTgQ4?si=ma06zvDWdxQdSos7">Youtube</a>. 
@@ -112,9 +112,9 @@
 
 				<article id="work-nulltime" class="panel">
 					<header>
-						<h1>nulltime - <a href="https://github.com/sarhuang/nullTime-prod" class="fa fa-link"><span>GitHub</span></a></h1>
+						<h2>nulltime - <a href="https://github.com/sarhuang/nullTime-prod" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
-					<h2>Background</h2>
+					<h3>Background</h3>
 					<p>
 						My favorite college computer science course was Software Engineering in junior year. I always felt unmotivated to get the weekly/bi-weekly coding assignment done because we would just move on to the next one.
 						I wanted a project that I would work on from scratch and for longer duration. And that's what Software Engineering was: a semester-long team project.
@@ -124,8 +124,8 @@
 						<br>
 						Below is our powerpoint presentation that explains the software:
 					</p>
-					<!--<iframe src= "pdfs\Nulltime Demo.pdf" class="image featured" height="500"></iframe> -->
-					<h2>My Contribution</h2>
+					<iframe src= "images/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>
+					<h3>My Contribution</h3>
 					<p>
 						This project convinced me that I wanted to do front-end development. 
 						It was my first experience using Angular, and I haven't used HTML and CSS since high school.
@@ -142,9 +142,9 @@
 
 				<article id="work-cosc452" class="panel">
 					<header>
-						<h1>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h1>
+						<h2>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
-					<h2>Background</h2>
+					<h3>Background</h3>
 					<p>
 						This class was definitely a standout in that it is one of the few classes that teach Javascript.
 						As someone who really likes coding visual things, this class was a fun creative challenge.
@@ -168,9 +168,9 @@
 
 				<article id="work-dungeon_dweller" class="panel">
 					<header>
-						<h1>Dungeon Dweller - <a href="https://github.com/sarhuang/Dungeon-Dweller" class="fa fa-link"><span>GitHub</span></a></h1>
+						<h2>Dungeon Dweller - <a href="https://github.com/sarhuang/Dungeon-Dweller" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
-					<h2>Background</h2>
+					<h3>Background</h3>
 					<p>
 						The best project I created in high school. In my senior year of high school, we had to create a game with the game engine Greenfoot (meant for education, not real game development).
 						The premise is a green slime was captured by a human kingdom and now must escape the dungeon to return back to its forest home.
@@ -184,7 +184,7 @@
 					<p>Play the game <a href="https://www.greenfoot.org/scenarios/28303">here</a>.
 						It must be impressive if there are over 1000 views.
 					</p>
-					<h2>My Contributions</h2>
+					<h3>My Contributions</h3>
 					This was a two-person project (me and Tyler Blair), and I was in charge of the game aesthetics.
 					<ul>
 						<li>Designed all character sprites in Pixilart</li>
@@ -196,9 +196,9 @@
 
 				<article id="work-horde" class="panel">
 					<header>
-						<h1>Horde - <a href="https://github.com/sarhuang/Horde" class="fa fa-link"><span>GitHub</span></a></h1>
+						<h2>Horde - <a href="https://github.com/sarhuang/Horde" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
-					<h2>Background</h2>
+					<h3>Background</h3>
 					<p>
 						For my AP Computer Science Principles project. I wasn't going to take the exam, but I still needed to submit something.
 						So here is a more simple clone of Dungeon Dweller that reused mostly the same code.
@@ -213,21 +213,45 @@
 					</p>
 				</article>
 
-				<article id="work-d" class="panel">
-					https://github.com/sarhuang/Dungeon-Dweller
+				<!--<article id="" class="panel">
 					<header>
-						<h1>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h1>
 					</header>
-					<h2>Background</h2>
-					<p>
-				</article>
+				</article>-->
 
 				<article id="profile" class="panel">
 					<header>
-						<h2>ABOUT ME</h2>
+						<h1>ABOUT ME</h1>
 					</header>
-					<!--<iframe src="sarah_huang_resume.pdf" class="image featured" height="500"></iframe>-->
-					
+					<p>
+						Hi, everyone! My name is Sarah Huang, and welcome to my website!You can find my resume here and learn about how I started the path of computer science.
+						<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
+						<br>
+						<h3>hello past</h3>
+						    At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
+						With that childhood dream in mind, I took as many computer science courses as my high school schedule would afford and created a few small, amateur video game projects for class. 
+						I entered my freshman year at the University of Tennessee, Knoxville with a strong coding background. 
+						Despite the challenges of taking first-year computer science courses asynchronously during the pandemic, my success convinced me that this major was the right choice. 
+						The computer science course of study expanded my small pond of childhood dream to the endless sea of computer science opportunities.
+						<br>
+						<br>
+						<h3>hello present</h3>
+						While general foundational courses are essential to strengthening my programming background during the first four semesters, the lack of clear specialty areas left me aimless about what I enjoyed and tolerated. 
+						During my summer after my sophomore year, my full-time internship at Jewelry Television opened my eyes to the possibility of software engineering competencies such as back-end and front-end autonomous testing, visual testing tools, REST APIs, agile methodologies, and technologies I had not encountered in my coursework. 
+						While writing automated front-end tests for the website, I grew to appreciate the human-centered design considerations with the logical navigation flow from browsing to purchasing and overall pleasant visual experience. 
+						Witnessing the practical application of software engineering in the workplace started my pivot of being a software engineer after graduation. 
+						However, this goal did not feel substantial as I clung to the generalized idea of being a software engineer without any direction of what to do with it.
+						<br>
+						<br>
+						The career direction clicked into place when I designed and coded the front-end of my team's web game for my junior year software engineering course. 
+						Developing the game aesthetic, coding the pop-up modal windows to make the site human-centered, and leading the team stand-up meetings helped me realize the satisfaction of programming a visually appealing software product for specific end users in a collaborative environment. 
+						My epiphany was that, while I enjoy playing video games, I do not need to design them to be happy. Ultimately, I study computer science because I enjoy coding what I can visually see, and I can do more of what I enjoy by being a software engineer specializing in front-end development. 
+						From that revelation, I began taking UI/UX and graphic design classes outside my major to build my personal portfolio website. Despite my efforts, there is little time to thoroughly explore this discovered passion before entering the workforce when the undergraduate computer science curriculum barely has any classes to encourage it.
+						<br>
+						<br>
+						<h3>hello future</h3>
+						Already in the Five-Year BS/MS program, I aim to enroll in the online Master of Science in Computer Science (MSCS) program with a concentration in software 
+						engineering to expand my knowledge and skillsets in areas beyond my undergraduate studies.
+					</p>
 				</article>
 
 
